EDU-36 Remove elmu related references

--- a/src/plugins/audio/audio.yml
+++ b/src/plugins/audio/audio.yml
@@ -7,7 +7,7 @@ source:
 externalLink:
   en: External link
   de: Externer Link
-elmuCdn:
+internalCdn:
   en: Elmu CDN
   de: Elmu CDN
 externalUrl:
