--- a/src/plugins/ear-training/ear-training.yml
+++ b/src/plugins/ear-training/ear-training.yml
@@ -31,7 +31,7 @@ midi:
 externalLink:
   en: External link
   de: Externer Link
-elmuCdn:
+internalCdn:
   en: Elmu CDN
   de: Elmu CDN
 externalUrl:
