--- a/src/plugins/image-tiles/image-tiles.yml
+++ b/src/plugins/image-tiles/image-tiles.yml
@@ -34,7 +34,7 @@ externalLink:
 articleLink:
   en: Article link
   de: Artikel-Link
-elmuCdn:
+internalCdn:
   en: Elmu CDN
   de: Elmu CDN
 externalUrl:
