--- a/src/plugins/video/video.yml
+++ b/src/plugins/video/video.yml
@@ -10,7 +10,7 @@ externalLink:
 internalLink:
   en: Internal link
   de: Interner Link
-elmuCdn:
+internalCdn:
   en: Elmu CDN
   de: Elmu CDN
 youtube:
