--- a/src/plugins/anavis/anavis.yml
+++ b/src/plugins/anavis/anavis.yml
@@ -23,8 +23,8 @@ externalLink:
   en: External link
   de: Externer Link
 internalCdn:
-  en: Elmu CDN
-  de: Elmu CDN
+  en: Internal CDN
+  de: Internes CDN
 youtube:
   en: Youtube
   de: Youtube
