--- a/src/plugins/audio/audio.yml
+++ b/src/plugins/audio/audio.yml
@@ -8,8 +8,8 @@ externalLink:
   en: External link
   de: Externer Link
 internalCdn:
-  en: Elmu CDN
-  de: Elmu CDN
+  en: Internal CDN
+  de: Internes CDN
 externalUrl:
   en: External URL
   de: Externe URL
