--- a/src/plugins/image-tiles/image-tiles.yml
+++ b/src/plugins/image-tiles/image-tiles.yml
@@ -35,8 +35,8 @@ articleLink:
   en: Article link
   de: Artikel-Link
 internalCdn:
-  en: Elmu CDN
-  de: Elmu CDN
+  en: Internal CDN
+  de: Internes CDN
 externalUrl:
   en: External URL
   de: Externe URL
