--- a/src/plugins/video/video.yml
+++ b/src/plugins/video/video.yml
@@ -11,8 +11,8 @@ internalLink:
   en: Internal link
   de: Interner Link
 internalCdn:
-  en: Elmu CDN
-  de: Elmu CDN
+  en: Internal CDN
+  de: Internes CDN
 youtube:
   en: Youtube
   de: Youtube
