--- a/src/components/pages/docs.yml
+++ b/src/components/pages/docs.yml
@@ -31,6 +31,9 @@ user:
 actions:
   en: Actions
   de: Aktionen
+archived:
+  en: Archived
+  de: Archiviert
 enterSearchTerm:
   en: Enter search term
   de: Suchbegriff eingeben
