EDU-26-Adjust search endpoint

--- a/src/components/pages/search.yml
+++ b/src/components/pages/search.yml
@@ -10,3 +10,6 @@ tags:
 numberOfContributors:
   en: Contributor count
   de: Anzahl Mitwirkender
+refineSearch:
+  en: Refine search by selecting specific tags
+  de: Andreas Helmberger
