EDU-26 Restyle search page

--- a/src/components/pages/search.yml
+++ b/src/components/pages/search.yml
@@ -13,3 +13,6 @@ numberOfContributors:
 refineSearch:
   en: Refine search by selecting specific tags
   de: Andreas Helmberger
+searchResultPrefix:
+  en: Results for
+  de: Ergibnise für
