--- a/src/components/pages/docs.yml
+++ b/src/components/pages/docs.yml
@@ -23,7 +23,7 @@ slug:
   en: URL path
   de: URL-Pfad
 udateDate:
-  en: Udate date
+  en: Update date
   de: Update-Datum
 user:
   en: User info
@@ -31,6 +31,9 @@ user:
 actions:
   en: Actions
   de: Aktionen
+archived:
+  en: Archived
+  de: Archiviert
 enterSearchTerm:
   en: Enter search term
   de: Suchbegriff eingeben
