--- a/src/resources/common.yml
+++ b/src/resources/common.yml
@@ -49,3 +49,6 @@ error:
 invalidSlug:
   en: The URL path must contain only lower case letters, hyphons, slashes and digits
   de: Der URL-Pfad darf nur Kleinbuchstaben, Bindestriche, Schrägstriche und Ziffern enthalten
+archivedAlert:
+  en: This document is archived and cannot be edited
+  de: Dieses Dokument ist archiviert und kann nicht editiert werden
