--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "del": "~6.0.0",
     "dropperx": "~1.0.1",
     "esbuild": "~0.13.9",
+    "escape-string-regexp": "~5.0.0",
     "express": "~4.17.1",
     "express-async-errors": "~3.1.1",
     "express-joi-validation": "~5.0.0",
