--- a/package.json
+++ b/package.json
@@ -23,111 +23,111 @@
     "url": "https://github.com/educandu/educandu"
   },
   "dependencies": {
-    "@ant-design/icons": "~4.7.0",
-    "@educandu/node-jsx-loader": "~2.1.0",
-    "@fortawesome/fontawesome-free": "~5.15.4",
-    "@unly/iso3166-1": "~1.0.2",
-    "abcjs": "~5.12.0",
-    "accept-language-parser": "~1.5.0",
-    "acho": "~4.0.6",
-    "antd": "~4.16.13",
-    "any-base": "~1.1.0",
-    "async": "~3.2.1",
-    "aurelia-dependency-injection": "~1.5.2",
-    "auto-bind": "~5.0.1",
-    "aws-sdk": "~2.1006.0",
-    "bcrypt": "~5.0.1",
-    "classnames": "~2.3.1",
-    "clipboard-copy": "~4.0.1",
-    "color": "~4.0.1",
-    "connect-mongo": "~4.6.0",
-    "cookie-parser": "~1.4.5",
-    "core-js": "~3.18.3",
-    "decompress": "~4.2.1",
-    "del": "~6.0.0",
-    "dropperx": "~1.0.1",
-    "esbuild": "~0.13.9",
-    "escape-string-regexp": "~5.0.0",
-    "express": "~4.17.1",
-    "express-async-errors": "~3.1.1",
-    "express-joi-validation": "~5.0.0",
-    "express-session": "~1.17.2",
-    "fast-deep-equal": "~3.1.3",
-    "flag-icon-css": "~3.5.0",
-    "format-error": "~1.0.0",
-    "glob": "~7.2.0",
-    "gravatar": "~1.8.2",
-    "htmlescape": "~1.1.1",
-    "http-errors": "~1.8.0",
-    "i18next": "~21.3.0",
-    "i18next-icu": "~2.0.3",
-    "immutable": "~4.0.0",
-    "intl-messageformat": "~9.9.2",
-    "joi": "~17.4.2",
-    "js-cookie": "~3.0.1",
-    "locale-compare": "~1.0.0",
-    "make-error": "~1.3.6",
-    "markdown-it": "~12.2.0",
-    "memoizee": "~0.4.15",
-    "mime": "~2.5.2",
-    "minio": "7.0.19",
-    "moment": "~2.29.1",
-    "mongodb": "~4.1.3",
-    "multer": "~1.4.3",
-    "node-graceful": "~3.1.0",
-    "nodemailer": "~6.7.0",
-    "parse5": "~6.0.1",
-    "parseboolean": "~1.0.0",
-    "passport": "~0.5.0",
-    "passport-local": "~1.0.0",
-    "pretty-bytes": "~5.6.0",
-    "prop-types": "~15.7.2",
-    "react": "~16.14.0",
-    "react-beautiful-dnd": "~13.1.0",
-    "react-color": "~2.19.3",
-    "react-compare-slider": "~2.1.0",
-    "react-cool-dimensions": "~2.0.7",
-    "react-countdown": "~2.3.2",
-    "react-dom": "~16.14.0",
-    "react-highlighter": "~0.4.3",
-    "react-i18next": "~11.12.0",
-    "react-piano": "~3.1.3",
-    "react-player": "~2.9.0",
-    "react-soundplayer": "~1.0.5",
-    "react-vis": "~1.11.7",
-    "read-all-stream": "~3.1.0",
-    "recursive-readdir": "~2.2.2",
-    "shallow-equal": "~1.2.1",
-    "soundfont-player": "~0.12.0",
-    "split-array": "~1.0.1",
-    "stream-to-array": "~2.3.0",
-    "superagent": "~6.1.0",
-    "thenby": "~1.3.4",
-    "toposort": "~2.0.2",
-    "umzug": "~v3.0.0-beta.16",
-    "urlencode": "~1.1.0",
-    "uuid": "~8.3.2"
+    "@ant-design/icons": "^4.7.0",
+    "@educandu/node-jsx-loader": "^2.1.0",
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "@unly/iso3166-1": "^1.0.2",
+    "abcjs": "^5.12.0",
+    "accept-language-parser": "^1.5.0",
+    "acho": "^4.0.6",
+    "antd": "^4.16.13",
+    "any-base": "^1.1.0",
+    "async": "^3.2.1",
+    "aurelia-dependency-injection": "^1.5.2",
+    "auto-bind": "^5.0.1",
+    "aws-sdk": "^2.1006.0",
+    "bcrypt": "^5.0.1",
+    "classnames": "^2.3.1",
+    "clipboard-copy": "^4.0.1",
+    "color": "^4.0.1",
+    "connect-mongo": "^4.6.0",
+    "cookie-parser": "^1.4.5",
+    "core-js": "^3.18.3",
+    "decompress": "^4.2.1",
+    "del": "^6.0.0",
+    "dropperx": "^1.0.1",
+    "esbuild": "^0.13.9",
+    "escape-string-regexp": "^5.0.0",
+    "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
+    "express-joi-validation": "^5.0.0",
+    "express-session": "^1.17.2",
+    "fast-deep-equal": "^3.1.3",
+    "flag-icon-css": "^3.5.0",
+    "format-error": "^1.0.0",
+    "glob": "^7.2.0",
+    "gravatar": "^1.8.2",
+    "htmlescape": "^1.1.1",
+    "http-errors": "^1.8.0",
+    "i18next": "^21.3.0",
+    "i18next-icu": "^2.0.3",
+    "immutable": "^4.0.0",
+    "intl-messageformat": "^9.9.2",
+    "joi": "^17.4.2",
+    "js-cookie": "^3.0.1",
+    "locale-compare": "^1.0.0",
+    "make-error": "^1.3.6",
+    "markdown-it": "^12.2.0",
+    "memoizee": "^0.4.15",
+    "mime": "^2.5.2",
+    "minio": "^7.0.19",
+    "moment": "^2.29.1",
+    "mongodb": "^4.1.3",
+    "multer": "^1.4.3",
+    "node-graceful": "^3.1.0",
+    "nodemailer": "^6.7.0",
+    "parse5": "^6.0.1",
+    "parseboolean": "^1.0.0",
+    "passport": "^0.5.0",
+    "passport-local": "^1.0.0",
+    "pretty-bytes": "^5.6.0",
+    "prop-types": "^15.7.2",
+    "react": "^16.14.0",
+    "react-beautiful-dnd": "^13.1.0",
+    "react-color": "^2.19.3",
+    "react-compare-slider": "^2.1.0",
+    "react-cool-dimensions": "^2.0.7",
+    "react-countdown": "^2.3.2",
+    "react-dom": "^16.14.0",
+    "react-highlighter": "^0.4.3",
+    "react-i18next": "^11.12.0",
+    "react-piano": "^3.1.3",
+    "react-player": "^2.9.0",
+    "react-soundplayer": "^1.0.5",
+    "react-vis": "^1.11.7",
+    "read-all-stream": "^3.1.0",
+    "recursive-readdir": "^2.2.2",
+    "shallow-equal": "^1.2.1",
+    "soundfont-player": "^0.12.0",
+    "split-array": "^1.0.1",
+    "stream-to-array": "^2.3.0",
+    "superagent": "^6.1.0",
+    "thenby": "^1.3.4",
+    "toposort": "^2.0.2",
+    "umzug": "^v3.0.0-beta.16",
+    "urlencode": "^1.1.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@jest/globals": "~27.3.1",
-    "docker-cli-js": "~2.8.0",
-    "eslint": "~8.1.0",
-    "eslint-plugin-import": "~2.25.2",
-    "eslint-plugin-react": "~7.26.1",
-    "eslint-plugin-react-hooks": "~4.2.0",
-    "execa": "~5.1.1",
-    "gulp": "~4.0.2",
-    "gulp-csso": "~4.0.1",
-    "gulp-eslint": "~6.0.0",
-    "gulp-if": "~3.0.0",
-    "gulp-less": "~5.0.0",
-    "gulp-plumber": "~1.2.1",
-    "gulp-sourcemaps": "~3.0.0",
-    "jest": "~27.2.5",
-    "less-plugin-autoprefix": "~2.0.0",
-    "node-mocks-http": "~1.11.0",
-    "process": "~0.11.10",
-    "sinon": "~11.1.2",
-    "yaml": "~1.10.2"
+    "@jest/globals": "^27.3.1",
+    "docker-cli-js": "^2.8.0",
+    "eslint": "^8.1.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-react": "^7.26.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "execa": "^5.1.1",
+    "gulp": "^4.0.2",
+    "gulp-csso": "^4.0.1",
+    "gulp-eslint": "^6.0.0",
+    "gulp-if": "^3.0.0",
+    "gulp-less": "^5.0.0",
+    "gulp-plumber": "^1.2.1",
+    "gulp-sourcemaps": "^3.0.0",
+    "jest": "^27.2.5",
+    "less-plugin-autoprefix": "^2.0.0",
+    "node-mocks-http": "^1.11.0",
+    "process": "^0.11.10",
+    "sinon": "^11.1.2",
+    "yaml": "^1.10.2"
   }
 }
