--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,6 +49,7 @@ jobs:
   publish-prerelease:
     runs-on: ubuntu-20.04
     needs: [verify]
+    if: github.ref == 'refs/heads/main'
     env:
       NODE_ENV: development
     steps:
