--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,7 @@ jobs:
   publish-prerelease:
     runs-on: ubuntu-20.04
     needs: [verify]
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/heads/hotfix')
     env:
       NODE_ENV: development
     steps:
