--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "parseboolean": "^1.0.0",
     "passport": "^0.5.0",
     "passport-local": "^1.0.0",
+    "passport-strategy": "^1.0.0",
     "pretty-bytes": "^5.6.0",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
