EDU-101 Add item leading to import page in main menu

--- a/src/resources/page-names.yml
+++ b/src/resources/page-names.yml
@@ -10,6 +10,9 @@ account:
 settings:
   en: Settings
   de: Einstellungen
+import:
+  en: Import
+  de: Import
 docs:
   en: Documents
   de: Dokumente
