EDU-101 Add checkbox for row selection

--- a/src/components/pages/import.yml
+++ b/src/components/pages/import.yml
@@ -1,6 +1,6 @@
 importButton:
-  en: Run import
-  de: Importieren
+  en: Start import
+  de: Import anfangen
 import:
   en: Import
   de: Importieren
