--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "auto-bind": "^5.0.1",
     "aws-sdk": "^2.1006.0",
     "bcrypt": "^5.0.1",
+    "buffer": "^6.0.3",
     "classnames": "^2.3.1",
     "clipboard-copy": "^4.0.1",
     "color": "^4.0.1",
