EDU-101 Test import crossmatching logic and do small corrections

--- a/src/components/pages/import.yml
+++ b/src/components/pages/import.yml
@@ -19,3 +19,10 @@ updateDate:
 source:
   en: Choose source
   de: Quelle wählen
+add:
+  en: Add
+  de: Hinzufügen
+update:
+  en: Update
+  de: Aktualisieren
+
