--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "memoizee": "^0.4.15",
     "mime": "^2.5.2",
     "minio": "^7.0.19",
-    "mongodb": "^4.1.3",
+    "mongodb": "4.1.4",
     "multer": "^1.4.3",
     "node-graceful": "^3.1.0",
     "nodemailer": "^6.7.0",
