--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,8 +38,6 @@ jobs:
         with:
           node-version: "16.11.0"
           cache: "yarn"
-      - name: Install github changelog generator
-        run: sudo gem install github_changelog_generator
       - name: Install node modules
         run: yarn install --non-interactive --check-files --frozen-lockfile
       - name: Lint
@@ -48,6 +46,12 @@ jobs:
         run: ./node_modules/.bin/gulp test
       - name: Codecov
         uses: codecov/codecov-action@v2
+      - name: Install github changelog generator
+        run: sudo gem install github_changelog_generator
+      - name: Export github token
+        run: export CHANGELOG_GITHUB_TOKEN=${{secrets.GITHUB_TOKEN}}
+      - name: Publish changelog
+        run: gh release create 0.2.0 --notes-file CHANGELOG.md --title 0.3.0
   publish-prerelease:
     runs-on: ubuntu-20.04
     needs: [verify]
