--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,6 +50,10 @@ jobs:
         run: ./node_modules/.bin/gulp test
       - name: Codecov
         uses: codecov/codecov-action@v2
+      - name: Build release notes
+        run:  ./node_modules/.bin/gulp generateChangelog
+      - name: Authenticate for changelog
+        run: gh auth login --with-token ${{secrets.GITHUB_TOKEN}}
       - name: Publish changelog
         run: gh release create 0.3.0 --notes-file CHANGELOG.md --title 0.3.0
   publish-prerelease:
