--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,22 +38,22 @@ jobs:
         with:
           node-version: "16.11.0"
           cache: "yarn"
-      - name: Install node modules
-        run: yarn install --non-interactive --check-files --frozen-lockfile
+      # - name: Install node modules
+      #   run: yarn install --non-interactive --check-files --frozen-lockfile
       - name: Install github changelog generator
         run: sudo gem install github_changelog_generator
       - name: Export github token
         run: export CHANGELOG_GITHUB_TOKEN=${{secrets.GITHUB_TOKEN}}
-      - name: Lint
-        run: ./node_modules/.bin/gulp lint
-      - name: Test
-        run: ./node_modules/.bin/gulp test
-      - name: Codecov
-        uses: codecov/codecov-action@v2
+      # - name: Lint
+      #   run: ./node_modules/.bin/gulp lint
+      # - name: Test
+      #   run: ./node_modules/.bin/gulp test
+      # - name: Codecov
+      #   uses: codecov/codecov-action@v2
       - name: Build release notes
         run:  ./node_modules/.bin/gulp generateChangelog
       - name: Authenticate for changelog
-        run: gh auth login --with-token ${{secrets.GITHUB_TOKEN}}
+        run: gh auth login
       - name: Publish changelog
         run: gh release create 0.3.0 --notes-file CHANGELOG.md --title 0.3.0
   publish-prerelease:
