EDU-75 Try again

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,7 +53,7 @@ jobs:
       - name: Build release notes
         run:  ./node_modules/.bin/gulp generateChangelog
       - name: Authenticate for changelog
-        run: gh auth login --with-token < ${{ secrets.GITHUG_TOKEN }}
+        run: gh auth login --with-token ${{ secrets.GITHUG_TOKEN }}
       - name: Publish changelog
         run: gh release create 0.3.0 --notes-file CHANGELOG.md --title 0.3.0
   publish-prerelease:
