EDU-75 Put create the changelog only on releases

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,25 +40,12 @@ jobs:
           cache: "yarn"
       - name: Install node modules
         run: yarn install --non-interactive --check-files --frozen-lockfile
-      - name: Install github changelog generator
-        run: sudo gem install github_changelog_generator
-      - name: Export github token
-        run: export CHANGELOG_GITHUB_TOKEN=${{secrets.GITHUB_TOKEN}}
       - name: Lint
         run: ./node_modules/.bin/gulp lint
       - name: Test
         run: ./node_modules/.bin/gulp test
       - name: Codecov
         uses: codecov/codecov-action@v2
-      - name: Build release notes
-        run:  ./node_modules/.bin/gulp generateChangelog
-      - name: Write github token
-        run: |
-          echo "${{ secrets.GITHUB_TOKEN }}" > gitToken.txt
-      - name: Authenticate for changelog
-        run: gh auth login --with-token < gitToken.txt
-      - name: Publish changelog
-        run: gh release create "0.0.0-pre.$GITHUB_SHA" --notes-file CHANGELOG.md --title "0.0.0-pre.$GITHUB_SHA"
   publish-prerelease:
     runs-on: ubuntu-20.04
     needs: [verify]
@@ -75,6 +62,19 @@ jobs:
         run: yarn install --non-interactive --check-files --frozen-lockfile
       - name: Build library
         run: ./node_modules/.bin/gulp build
+      - name: Install github changelog generator
+        run: sudo gem install github_changelog_generator
+      - name: Export github token
+        run: export CHANGELOG_GITHUB_TOKEN=${{secrets.GITHUB_TOKEN}}
+      - name: Build release notes
+        run:  ./node_modules/.bin/gulp generateChangelog
+      - name: Write github token to file
+        run: |
+          echo "${{ secrets.GITHUB_TOKEN }}" > gitToken.txt
+      - name: Authenticate for changelog
+        run: gh auth login --with-token < gitToken.txt
+      - name: Publish changelog
+        run: gh release create "0.0.0-pre.$GITHUB_SHA" --notes-file CHANGELOG.md --title "0.0.0-pre.$GITHUB_SHA"
       - name: Authenticate with npm
         run: npm set //registry.npmjs.org/:_authToken ${{ secrets.NPM_AUTH_TOKEN }}
       - name: npm version
@@ -102,6 +102,19 @@ jobs:
         run: yarn install --non-interactive --check-files --frozen-lockfile
       - name: Build library
         run: ./node_modules/.bin/gulp build
+      - name: Install github changelog generator
+        run: sudo gem install github_changelog_generator
+      - name: Export github token
+        run: export CHANGELOG_GITHUB_TOKEN=${{secrets.GITHUB_TOKEN}}
+      - name: Build release notes
+        run:  ./node_modules/.bin/gulp generateChangelog
+      - name: Write github token to file
+        run: |
+          echo "${{ secrets.GITHUB_TOKEN }}" > gitToken.txt
+      - name: Authenticate for changelog
+        run: gh auth login --with-token < gitToken.txt
+      - name: Publish changelog
+        run: gh release create ${{ steps.tag.outputs.tag }} --notes-file CHANGELOG.md --title ${{ steps.tag.outputs.tag }}
       - name: Authenticate with npm
         run: npm set //registry.npmjs.org/:_authToken ${{ secrets.NPM_AUTH_TOKEN }}
       - name: npm version
