EDU-124 Add basic imports page

--- a/src/resources/page-names.yml
+++ b/src/resources/page-names.yml
@@ -13,6 +13,9 @@ settings:
 import:
   en: Import
   de: Import
+imports:
+  en: Imports overview
+  de: Übersicht über Importe
 docs:
   en: Documents
   de: Dokumente
