--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,7 +54,8 @@ jobs:
     if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/heads/hotfix')
     env:
       NODE_ENV: development
-      CHANGELOG_GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+      GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+      NPM_AUTH_TOKEN: ${{secrets.NPM_AUTH_TOKEN}}
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
@@ -71,11 +72,13 @@ jobs:
         run:  ./node_modules/.bin/gulp generateChangelog
       - name: Write github token to file
         run: |
-          echo "${{ secrets.GITHUB_TOKEN }}" > gitToken.txt
+          echo "$GITHUB_TOKEN" > gitToken.txt
+      - name: Authenticate for changelog
+        run:  echo "$GITHUB_TOKEN" | gh auth login --with-token
       - name: Publish changelog
         run: gh release create "0.0.0-pre.$GITHUB_SHA" --notes-file CHANGELOG.md --title "0.0.0-pre.$GITHUB_SHA"
       - name: Authenticate with npm
-        run: npm set //registry.npmjs.org/:_authToken ${{ secrets.NPM_AUTH_TOKEN }}
+        run: npm set //registry.npmjs.org/:_authToken $NPM_AUTH_TOKEN
       - name: npm version
         run: npm version --allow-same-version --git-tag-version=false "0.0.0-pre.$GITHUB_SHA"
       - name: npm publish
@@ -86,7 +89,8 @@ jobs:
     if: startsWith(github.ref, 'refs/tags/')
     env:
       NODE_ENV: development
-      CHANGELOG_GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+      GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+      NPM_AUTH_TOKEN: ${{secrets.NPM_AUTH_TOKEN}}
     steps:
       - name: Get tag
         id: tag
@@ -107,11 +111,11 @@ jobs:
       - name: Build release notes
         run:  ./node_modules/.bin/gulp generateChangelog
       - name: Authenticate for changelog
-        run:  echo "${{ secrets.GITHUB_TOKEN }}" | gh auth login --with-token
+        run:  echo "$GITHUB_TOKEN" | gh auth login --with-token
       - name: Publish changelog
         run: gh release create ${{ steps.tag.outputs.tag }} --notes-file CHANGELOG.md --title ${{ steps.tag.outputs.tag }}
       - name: Authenticate with npm
-        run: npm set //registry.npmjs.org/:_authToken ${{ secrets.NPM_AUTH_TOKEN }}
+        run: npm set //registry.npmjs.org/:_authToken $NPM_AUTH_TOKEN
       - name: npm version
         run: npm version --allow-same-version --git-tag-version=false ${{ steps.tag.outputs.tag }}
       - name: npm publish
