EDU-124 Move styles to less

--- a/src/resources/page-names.yml
+++ b/src/resources/page-names.yml
@@ -15,7 +15,7 @@ import:
   de: Import
 imports:
   en: Imports overview
-  de: Übersicht über Importe
+  de: Importsübersicht
 docs:
   en: Documents
   de: Dokumente
