EDU-124 Fix translation

--- a/src/resources/page-names.yml
+++ b/src/resources/page-names.yml
@@ -15,7 +15,7 @@ import:
   de: Import
 imports:
   en: Imports overview
-  de: Importsübersicht
+  de: Import-Übersicht
 docs:
   en: Documents
   de: Dokumente
