EDU-124 Update translations

--- a/src/components/pages/import-batch-view.yml
+++ b/src/components/pages/import-batch-view.yml
@@ -24,7 +24,7 @@ createdBy:
   de: Erstellt von
 importHeading:
   en: Import overview
-  de: Import ubersicht
+  de: Import-Übersicht
 batchStatus:
   en: Batch status
   de: Chargenstatus
