EDU-124 Fix visual issues

--- a/src/components/pages/create-import-batch.yml
+++ b/src/components/pages/create-import-batch.yml
@@ -17,8 +17,8 @@ updateDate:
   en: Update date
   de: Update-Datum
 source:
-  en: Choose source
-  de: Quelle wählen
+  en: Source 
+  de: Quelle
 add:
   en: Add
   de: Hinzufügen
