EDU-124 Rename create-import-batch to import-batch-creation

--- a/src/resources/page-names.yml
+++ b/src/resources/page-names.yml
@@ -10,7 +10,7 @@ account:
 settings:
   en: Settings
   de: Einstellungen
-createImportBatch:
+importBatchCreation:
   en: Import
   de: Import
 importBatches:
