--- a/src/components/pages/import-batches.yml
+++ b/src/components/pages/import-batches.yml
@@ -27,7 +27,7 @@ createdOn:
   de: Erstellt am
 completedOn:
   en: Completed on
-  de: Vervollständigt am
+  de: Abgeschlossen am
 createdBy:
   en: Created by
   de: Erstellt von
