--- a/package.json
+++ b/package.json
@@ -120,6 +120,7 @@
     "gulp-less": "^5.0.0",
     "gulp-plumber": "^1.2.1",
     "gulp-sourcemaps": "^3.0.0",
+    "inquirer": "^8.2.0",
     "jest": "^27.2.5",
     "less-plugin-autoprefix": "^2.0.0",
     "node-mocks-http": "^1.11.0",
