EDU-29 Fix documents page for revisions

--- a/src/resources/common.yml
+++ b/src/resources/common.yml
@@ -52,3 +52,6 @@ invalidSlug:
 archivedAlert:
   en: This document is archived and cannot be edited
   de: Dieses Dokument ist archiviert und kann nicht editiert werden
+viewVersions:
+  en: View versions
+  de: Versionen ansehen
