EDU-29 Add parmenently linked revisions

--- a/src/resources/common.yml
+++ b/src/resources/common.yml
@@ -55,3 +55,6 @@ archivedAlert:
 viewVersions:
   en: View versions
   de: Versionen ansehen
+viewDocument:
+  en: View document
+  de: Dokument ansehen
