EDU-137 Show originUrl in footer of articles page

--- a/src/components/credits-footer.yml
+++ b/src/components/credits-footer.yml
@@ -7,6 +7,9 @@ license:
 source:
   en: Source
   de: Quelle
+originalSource:
+  en: Original source
+  de: Original Quelle
 contributionsBy:
   en: Contributions by
   de: Bearbeitungen durch
