--- a/src/resources/common.yml
+++ b/src/resources/common.yml
@@ -54,4 +54,4 @@ archivedAlert:
   de: Dieses Dokument ist archiviert und kann nicht editiert werden
 externalDocumentWarning:
   en: This document is a copy. The original can be edited <0>here</0>.
-  de: Dieses Dokument ist eine Kopie. Das Original könnte <0>hier</0> editiert werden.
+  de: Dieses Dokument ist eine Kopie. Das Original kann <0>hier</0> editiert werden.
