EDU-137 Show urls in footer as links

--- a/src/components/credits-footer.yml
+++ b/src/components/credits-footer.yml
@@ -1,6 +1,6 @@
 citation:
-  en: Article “{title}”, {url}, {date}
-  de: Artikel »{title}«, {url}, {date}
+  en: Article “{title}”
+  de: Artikel »{title}«
 license:
   en: License
   de: Lizenz
@@ -9,7 +9,7 @@ source:
   de: Quelle
 originalSource:
   en: Original source
-  de: Original Quelle
+  de: Originalquelle
 contributionsBy:
   en: Contributions by
   de: Bearbeitungen durch
