--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "react-vis": "^1.11.7",
     "read-all-stream": "^3.1.0",
     "recursive-readdir": "^2.2.2",
+    "serialize-error": "^9.0.0",
     "shallow-equal": "^1.2.1",
     "soundfont-player": "^0.12.0",
     "split-array": "^1.0.1",
