EDU-161 Add message for missing import sources

--- a/src/components/pages/import-batches.yml
+++ b/src/components/pages/import-batches.yml
@@ -37,3 +37,6 @@ createImport:
 importsHeaderPrefix:
   en: Source
   de: Quelle
+noImportSourcesConfigures:
+  en: No import sources configured
+  de: Keine Importquellen konfiguriert
