--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,6 @@ jobs:
     runs-on: ubuntu-20.04
     env:
       NODE_ENV: development
-      EDUCANDU_ENV: test
     services:
       minio:
         image: bitnami/minio:2020.12.18
@@ -31,10 +30,10 @@ jobs:
         ports:
           - 8000:8000
     steps:
-      - name: Change user
-        run: sudo chown -R $USER:$USER ${{ github.workspace }}
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Install node
+        uses: actions/setup-node@v2
         with:
           node-version: "16.13.1"
           cache: "yarn"
@@ -46,61 +45,29 @@ jobs:
         run: ./node_modules/.bin/gulp test
       - name: Codecov
         uses: codecov/codecov-action@v2
-      - name: Authenticate for changelog
-        run:  echo "${{ secrets.GITHUB_TOKEN }}" | gh auth login --with-token
-  publish-prerelease:
-    runs-on: ubuntu-20.04
-    needs: [verify]
-    if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/heads/hotfix')
-    env:
-      NODE_ENV: development
-      CHANGELOG_GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
-      NPM_AUTH_TOKEN: ${{secrets.NPM_AUTH_TOKEN}}
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-        with:
-          node-version: "16.13.1"
-          cache: "yarn"
-      - name: Install node modules
-        run: yarn install --non-interactive --check-files --frozen-lockfile
-      - name: Build library
-        run: ./node_modules/.bin/gulp build
-      - name: Install github changelog generator
-        run: sudo gem install github_changelog_generator
-      - name: Build release notes
-        run:  ./node_modules/.bin/gulp generateChangelog
-      - name: Authenticate for changelog
-        run:  echo "$CHANGELOG_GITHUB_TOKEN" | gh auth login --with-token
-      - name: Publish changelog
-        run: gh release create "0.0.0-pre.$GITHUB_SHA" --notes-file CHANGELOG.md --title "0.0.0-pre.$GITHUB_SHA"
-      - name: Authenticate with npm
-        run: npm set //registry.npmjs.org/:_authToken $NPM_AUTH_TOKEN
-      - name: npm version
-        run: npm version --allow-same-version --git-tag-version=false "0.0.0-pre.$GITHUB_SHA"
-      - name: npm publish
-        run: npm publish
-  publish-tag:
+  publish:
     runs-on: ubuntu-20.04
     needs: [verify]
     if: startsWith(github.ref, 'refs/tags/')
     env:
       NODE_ENV: development
-      CHANGELOG_GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+      GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
       NPM_AUTH_TOKEN: ${{secrets.NPM_AUTH_TOKEN}}
     steps:
-      - name: Get tag
-        id: tag
-        uses: dawidd6/action-get-tag@v1
-        with:
-          strip_v: true
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Install node
+        uses: actions/setup-node@v2
         with:
           node-version: "16.13.1"
           cache: "yarn"
       - name: Install node modules
         run: yarn install --non-interactive --check-files --frozen-lockfile
+      - name: Get tag
+        id: tag
+        uses: dawidd6/action-get-tag@v1
+        with:
+          strip_v: true
       - name: Build library
         run: ./node_modules/.bin/gulp build
       - name: Install github changelog generator
@@ -108,7 +75,7 @@ jobs:
       - name: Build release notes
         run:  ./node_modules/.bin/gulp generateChangelog
       - name: Authenticate for changelog
-        run:  echo "$CHANGELOG_GITHUB_TOKEN" | gh auth login --with-token
+        run:  echo "$GITHUB_TOKEN" | gh auth login --with-token
       - name: Publish changelog
         run: gh release create ${{ steps.tag.outputs.tag }} --notes-file CHANGELOG.md --title ${{ steps.tag.outputs.tag }}
       - name: Authenticate with npm
