--- a/package.json
+++ b/package.json
@@ -107,12 +107,16 @@
   },
   "devDependencies": {
     "@jest/globals": "^27.3.1",
+    "commits-between": "^0.2.0",
     "docker-cli-js": "^2.8.0",
+    "envalid": "^7.2.2",
     "eslint": "^8.1.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "execa": "^5.1.1",
+    "ghreleases": "^3.0.2",
+    "git-semver-tags": "^4.1.1",
     "gulp": "^4.0.2",
     "gulp-csso": "^4.0.1",
     "gulp-eslint": "^6.0.0",
@@ -125,7 +129,9 @@
     "less-plugin-autoprefix": "^2.0.0",
     "node-mocks-http": "^1.11.0",
     "process": "^0.11.10",
+    "semver": "^7.3.5",
     "sinon": "^11.1.2",
-    "yaml": "^1.10.2"
+    "yaml": "^1.10.2",
+    "yargs": "^17.3.0"
   }
 }
