--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,8 +2,8 @@ name: Publish
 on:
   push:
     tags:
-      - '[0-9]+.[0-9]+.[0-9]+'
-      - '[0-9]+.[0-9]+.[0-9]+-*'
+      - 'v[0-9]+.[0-9]+.[0-9]+'
+      - 'v[0-9]+.[0-9]+.[0-9]+-*'
 jobs:
   publish:
     runs-on: ubuntu-20.04
@@ -27,9 +27,11 @@ jobs:
         run: yarn install --non-interactive --check-files --frozen-lockfile
       - name: Get tag from build environment
         uses: dawidd6/action-get-tag@v1
+        with:
+          strip_v: true
         id: tag
       - name: Verify tag format
-        run: ./node_modules/.bin/gulp verifyTag --tag ${{ steps.tag.outputs.tag }}
+        run: ./node_modules/.bin/gulp verifySemverTag --tag ${{ steps.tag.outputs.tag }}
       - name: Set package version
         run: npm version --allow-same-version --git-tag-version=false ${{ steps.tag.outputs.tag }}
       - name: Build library
@@ -38,5 +40,5 @@ jobs:
         run: npm set //registry.npmjs.org/:_authToken $NPM_AUTH_TOKEN
       - name: Publish to npm
         run: npm publish
-      - name: Create Github release
-        run:  ./node_modules/.bin/gulp release --tag ${{ steps.tag.outputs.tag }} --jira-user "$JIRA_USER" --jira-api-key "$JIRA_API_KEY"
+      - name: Create Github release and tag JIRA issues
+        run:  ./node_modules/.bin/gulp release --jira-user "$JIRA_USER" --jira-api-key "$JIRA_API_KEY"
