--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
   },
   "devDependencies": {
     "@jest/globals": "^27.3.1",
+    "axios-retry": "^3.2.4",
     "commits-between": "^0.2.0",
     "docker-cli-js": "^2.8.0",
     "envalid": "^7.2.2",
