--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "express-async-errors": "^3.1.1",
     "express-joi-validation": "^5.0.0",
     "express-session": "^1.17.2",
+    "express-useragent": "^1.0.15",
     "fast-deep-equal": "^3.1.3",
     "flag-icon-css": "^3.5.0",
     "glob": "^7.2.0",
