EDU-176 Add more data to the unsupported browsers page

--- a/src/components/pages/browser-not-supported.yml
+++ b/src/components/pages/browser-not-supported.yml
@@ -1,3 +1,6 @@
+headerText:
+ en: We have detected that your browser version is not supported by our website
+ de: Wir haben festgestellt, dass Ihre Browserversion von unserer Website nicht unterstützt wird
 mainText:
- en: We have detected that your browser version is not supported by our
- de: We have detected that your browser version is not supported by our
+ en: Please download a modern broswer of your choice, some examples below
+ de: Bitte laden Sie einen modernen Browser Ihrer Wahl herunter, einige Beispiele unten
