--- a/package.json
+++ b/package.json
@@ -109,7 +109,9 @@
   },
   "devDependencies": {
     "@jest/globals": "^27.3.1",
+    "@rauschma/stringio": "^1.4.0",
     "axios-retry": "^3.2.4",
+    "chalk": "^5.0.0",
     "commits-between": "^0.2.0",
     "docker-cli-js": "^2.8.0",
     "envalid": "^7.2.2",
@@ -127,6 +129,7 @@
     "gulp-less": "^5.0.0",
     "gulp-plumber": "^1.2.1",
     "gulp-sourcemaps": "^3.0.0",
+    "http-proxy": "^1.18.1",
     "inquirer": "^8.2.0",
     "jest": "^27.2.5",
     "less-plugin-autoprefix": "^2.0.0",
