--- a/src/components/confirmation-dialogs.yml
+++ b/src/components/confirmation-dialogs.yml
@@ -9,7 +9,7 @@ deleteDocumentConfirmation:
   de: Möchten Sie das Dokument "{title}" wirklich löschen?
 deleteCdnDocumentConfirmation:
   en: Do you really want to delete the CDN file "{fileName}"?
-  de: Möchten Sie das CDN Datei "{fileName}" wirklich löschen?
+  de: Möchten Sie die Datei "{fileName}" wirklich vom CDN löschen?
 thisActionIsIrreversible:
   en: This Action is irreversible!
   de: Diese Aktion ist unwiderrufbar!
