--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ant-design/icons": "^4.7.0",
     "@educandu/node-jsx-loader": "^2.2.0",
     "@fortawesome/fontawesome-free": "^5.15.4",
+    "@sindresorhus/slugify": "^2.1.0",
     "@unly/iso3166-1": "^1.0.2",
     "abcjs": "^5.12.0",
     "accept-language-parser": "^1.5.0",
