EDU-165 Add rooms feature toggle and rooms tab

--- a/src/components/pages/my-space.yml
+++ b/src/components/pages/my-space.yml
@@ -1,6 +1,9 @@
-accountTabTitle:
-  en: Account
-  de: Konto
 profileTabTitle:
   en: Profile
   de: Profil
+accountTabTitle:
+  en: Account
+  de: Konto
+roomsTabTitle:
+  en: Rooms
+  de: Räume
