EDU-165 Add sections to the rooms tab content

--- a/src/resources/common.yml
+++ b/src/resources/common.yml
@@ -70,3 +70,9 @@ accept:
 logoff:
   en: Log off
   de: Abmelden
+createdOn:
+  en: Created on
+  de: Erstellt am
+createdBy:
+  en: Created by
+  de: Erstellt von
