EDU-196 Fix translations

--- a/src/components/pages/room.yml
+++ b/src/components/pages/room.yml
@@ -9,7 +9,7 @@ memberUsername:
   de: Mitglieder Benutzername
 memberEmail:
   en: Member email
-  de: Mitglieder email
+  de: Mitglieder-Email
 joinedOn:
   en: Member since
   de: Mitglied seit
