--- a/src/components/pages/room-membership-confirmation.yml
+++ b/src/components/pages/room-membership-confirmation.yml
@@ -17,5 +17,5 @@ homeLink:
   en: Home
   de: Home
 redirectMessage:
-  en: You will be redirected to the <0>room</0> in {seconds, plural, =1 {# second} other {# seconds}}.
-  de: Sie werden in {seconds, plural, =1 {# Sekunde} other {# Sekunden}} in den <0>Raum</0> weitergeleitet.
+  en: You will be redirected to room <0>{roomName}</0> in {seconds, plural, =1 {# second} other {# seconds}}.
+  de: Sie werden in {seconds, plural, =1 {# Sekunde} other {# Sekunden}} in den Raum <0>{roomName}</0> weitergeleitet.
