EDU-205 Add new room form

--- a/src/components/rooms-tab.yml
+++ b/src/components/rooms-tab.yml
@@ -19,6 +19,10 @@ access:
 joinedOn:
   en: Joined on
   de: Eingetreten am
-defaultRoomName:
+newRoom:
   en: New room
   de: Neuer Raum
+roomNameRequired:
+  en: Please specify a room name
+  de: Bitte geben Sie einen Raumnamen
+
