--- a/src/components/rooms-tab.yml
+++ b/src/components/rooms-tab.yml
@@ -24,5 +24,5 @@ newRoom:
   de: Neuer Raum
 roomNameRequired:
   en: Please specify a room name
-  de: Bitte geben Sie einen Raumnamen
+  de: Bitte geben Sie einen Raumnamen an
 
