EDU-226 Toggle tests order in ear-training plugin

--- a/src/plugins/ear-training/ear-training.yml
+++ b/src/plugins/ear-training/ear-training.yml
@@ -43,3 +43,12 @@ internalUrl:
 copyrightInfos:
   en: Copyright infos
   de: Copyright Infos
+testsOrder:
+  en: Display order
+  de: Anzeigereihenfolge
+testsOrderGiven:
+  en: as given
+  de: wie angegeben
+testsOrderRandom:
+  en: random
+  de: zufällig
