EDU-230 Add announcement to settings page

--- a/src/components/pages/settings.yml
+++ b/src/components/pages/settings.yml
@@ -1,3 +1,9 @@
+announcementHeader:
+  en: Announcement
+  de: Mitteilung
+announcementPreview:
+  en: Preview
+  de: Vorschau
 helpPageHeader:
   en: Help page
   de: Hilfe-Seite
